#ifndef USER_SESSION_H_
#define USER_SESSION_H_

#include <string>

class UserSession
{
private:
    std::string userId;
    bool valid = false;

public:
    
};
#endif
